tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__SuctionDeviceNic-AAAAAAAAAAAAAAAAAAACIQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 545,
  "prerequisites": [
    93
  ],
  "properties": {
    "auto_claim": false,
    "desc": "I hope you're not thinking about what I'm thinking you're thinking about...\n\nIt's highly recommended to get one of these, as the efficiency in terms of coal/steam used to extracting something is a lot better when using EU.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lSuction Device... Nice",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    93
  ],
  "rewards": [],
  "tasks": []
}
