tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__TetrahedriteStib-AAAAAAAAAAAAAAAAAAACVQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 597,
  "prerequisites": [
    88,
    479
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Maybe you're wondering why you need tetrahedrite or stibnite. Well, antimony can be centrifuged out of it which is very useful for batteries. Batteries store power, so you can have highs and lows in your power production while still outputting stable power.\n\nThe veins can be found between Y level 80-120.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lTetrahedrite, Stibnite and Copper",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    88,
    479
  ],
  "rewards": [],
  "tasks": []
}
