tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__ThermalCentrifug-AAAAAAAAAAAAAAAAAAACVw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 599,
  "prerequisites": [
    836
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A machine to get different byproducts out of your crushed or purified ore dust. It's useful for getting a bit of Gallium out of crushed Zinc Ore for your Diodes needed in good circuits.\n\nWhen you have IC2 nuclear reactors and want to recycle your depleted fuel rods, it's the only way to do so.\n\nIf you can't produce the 2A of LV power for this machine right now, wait until you get to MV and use transformers to power an LV version.\n\nIn LV, you can obtain the same ore byproducts via different methods. The Thermal Centrifuge only becomes really important in HV when you can combine it with the HV macerator.\n\n[warn]Sending MV power to an LV device, even if it uses more than 1A will cause an explosion, so don't do that.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lThermal Centrifuge",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    836
  ],
  "rewards": [],
  "tasks": []
}
