tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__TimetoDryOuttheN-AAAAAAAAAAAAAAAAAAAEQg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1090,
  "prerequisites": [
    625,
    546
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Pumps can do more than pump oil and water. You can go to the nether and pump lava from the huge lava lakes too.\n\nOnce you reach HV, lava can be centrifuged for Silicon Dioxide, Magnesia, Quicklime, Gold, Sapphire, and Tantalite. You can get Silicon, Magnesium, Calcium, Gold, Aluminium, Manganese, Tantalum, and Oxygen out of them.\n\nThis is a good use for your LV pumps once you upgrade to MV pumps for oil. If you get into Thaumcraft or Blood Magic, there are ways to produce lava with magic unlimitedly and easily too.\n\n[note]You'll want either ULV tanks and cells, or BC tanks and a dolly to transport your lava.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lTime to Dry Out the Nether",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    625,
    546
  ],
  "rewards": [],
  "tasks": []
}
